environments/production/kustomizations/website-beta/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: opaque
        image: ghcr.io/ryansquared/opaque
        ports:
        - containerPort: 8000
        args:
        - -c
        - /etc/opaque/config.yaml
        volumeMounts:
        - name: config
          mountPath: /etc/opaque
      - name: opaque-static
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: static
          mountPath: /usr/share/nginx/html
      volumes:
      - name: static
        emptyDir: {}
      - name: config
        configMap:
          name: opaque-config
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: website
---
apiVersion: v1
kind: Service
metadata:
  name: website-static
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: website
