environments/production/kustomizations/website-beta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: beta.ryansquared.pub
spec:
  ingressClassName: nginx
  rules:
  - host: beta.ryansquared.pub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: website-static
            port:
              number: 80
  tls:
  - hosts:
    - beta.ryansquared.pub
    secretName: website-tls
